src/test/ui/parser/new-unicode-escapes-4.stderr
error: invalid character in unicode escape: l
  --> $DIR/new-unicode-escapes-4.rs:2:17
   |
LL |     let s = "\u{lol}";
   |                 ^

error: aborting due to previous error

